libs/iroha/tests/ui_fail/cant_filter_singular_query.stderr
error[E0599]: the method `with_filter` exists for struct `QueryRequestBuilder<'_, FindDomainById>`, but its trait bounds were not satisfied
  --> tests/ui_fail/cant_filter_singular_query.rs:14:10
   |
12 |       let result = client
   |  __________________-
13 | |         .build_query(client::domain::by_id("domain".parse().unwrap()))
14 | |         .with_filter(PredicateBox::new(
   | |         -^^^^^^^^^^^ method cannot be called on `QueryRequestBuilder<'_, FindDomainById>` due to unsatisfied trait bounds
   | |_________|
   |
   |
  ::: $WORKSPACE/libs/iroha_data_model/src/query/mod.rs
   |
   | /     queries! {
   | |         /// [`FindAllDomains`] Iroha Query finds all [`Domain`]s presented in Iroha [`Peer`].
   | |         #[derive(Copy, Display)]
   | |         #[display(fmt = "Find all domains")]
...  |
   | |         }
   | |     }
   | |_____- doesn't satisfy `_: IterableQuery`
   |
   = note: the following trait bounds were not satisfied:
           `iroha::iroha_data_model::prelude::FindDomainById: IterableQuery`
